# hunt2025

./: .dir-locals.el  .gitignore  .prettierignore  .swcrc  .terraform.lock.hcl  README.md  atlantis.yaml  flake.nix  node-webpack.config.js  node-webpack.config.mjs  package-lock.json  package.json  server.nix  tsconfig.json  webpack.config.mjs
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.idx/: dev.nix
frontend/: .prettierignore  default.nix  knexfile.ts  node-webpack.config.mjs  package-lock.json  package.json  webpack.config.mjs
infra/: .envrc  .sops.yaml  config.nix  dev-vm-base.nix  dev-vm.nix  server.nix  shell.nix  test.nix
loadtest/: .envrc  .headerignore  README.md  admin.py  early_user.py  late_user.py  pyproject.toml  shell.nix
loadtest/lib/: admin_token.py  websocket.py
pkgs/: all-packages.nix  thingsboard.nix
plump-himalayas/: default.nix  pyproject.toml  server.py
puzzledata/: dump-json.ts  index.ts  types.ts
radioman/: .envrc  README.md  lib.liq  radio.liq  schedule.json  server.liq  shell.nix  station-break-test.liq
regsite/: index.html  style.css  styles.css
services/: thingsboard.nix
site/: .envrc  .gitignore  .prettierignore  .swcrc  README.md  default.nix  eslint.config.mjs  jest.config.ts  knexfile.ts  node-webpack.config.mjs  package-lock.json  package.json  playwright.config.ts  rspack.config.mjs  shared-tsconfig.json  shell.nix  tsconfig.json  webpack.config.mjs
src/: app.ts  app.tsx  assets.ts  client.tsx  main.ts  routes.tsx  serverMain.tsx
thingsboard/: default.nix  pom.xml  rulechains.json
(+1811 files in other folders)
